Added Prizes to the prizes page and styled them some.

--- a/webroot/css/styles.css
+++ b/webroot/css/styles.css
@@ -600,3 +600,21 @@ div.twitImg {
 	width: 85px;
 }
 
+.prize {
+
+}
+
+.prize-largest {
+	font-size: 20px;
+	margin-top: 20px;
+}
+
+.prize-larger {
+	font-size: 16px;
+}
+
+.prize-note {
+	text-align: center;
+	font-size: 10px;
+}
+
